# ai-governance-rag

./: README.md
OneDrive/Documents/Assessment INSCALE/: .gitignore  pyproject.toml
OneDrive/Documents/Assessment INSCALE/sample_docs/: governance_notes.md  risk_management.txt  transparency.json
OneDrive/Documents/Assessment INSCALE/src/docqa/: __init__.py  answer.py  cli.py  index.py  loaders.py  text.py
OneDrive/Documents/Assessment INSCALE/tests/: test_docqa.py
